<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#fece2f"
    tools:context=".OtpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Otp"
            android:textAlignment="center"
            android:textColor="#683F02"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="@font/alegreya_sc"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/otp_enter"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8dp"
            android:inputType="number"
            android:hint="@string/OTP"
            android:drawablePadding="8dp"
            android:textColor="@color/black" />

        <Button
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="60dp"
            android:text="@string/Check_otp"
            android:id="@+id/otp_verify_btn"
            android:textSize="18sp"
            android:layout_marginTop="130dp"
            android:backgroundTint="#A3624B05"
            android:layout_marginBottom="30dp"
            app:cornerRadius="20dp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>