<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".AdminLogin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:backgroundTint="@color/CardColor">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignIn"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/ButtonColour"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/Login_email"
                    android:layout_marginTop="60dp"
                    android:padding="8dp"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/email"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/baseline_contact_page_24"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/Login_password"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="120dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:background="@drawable/custom_edittext"
            android:hint="@string/Password"
            android:textColor="@color/black"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/baseline_enhanced_encryption_24"/>


        <Button
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="60dp"
            android:text="@string/SignIn"
            android:id="@+id/Login_btn"
            android:textSize="18sp"
            android:layout_marginTop="190dp"
            android:backgroundTint="@color/ButtonColour"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"
            app:cornerRadius="20dp"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/SignupRedirectingtext"-->
<!--            android:text="@string/SignUpRedirectingtext"-->
<!--            android:layout_gravity="center"-->
<!--            android:padding="8dp"-->
<!--            android:layout_marginTop="120dp"-->
<!--            android:textColor="#372101"-->
<!--            android:textSize="18sp"/>-->

    </androidx.cardview.widget.CardView>

</LinearLayout>